<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@mipmap/sushi_icon_png"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Restaurant" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Favorites" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/MyCart" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@mipmap/person"
            android:title="@string/MyAccount" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/aboutus" />
                <item
                    android:id="@+id/nav_contactus"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/contactus" />
                <item
                    android:id="@+id/nav_TermsandConditions"
                    android:icon="@mipmap/terms"
                    android:title="@string/TermsandConditions" />
            </menu>
        </item>

    </group>
</menu>