<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/sushi_rolls_with_wooden_chopsticks_on_white_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#322e2b"
            android:textSize="40.5sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/sharp_person_24"
            android:hint="@string/user_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/baseline_lock_24"

            android:hint="@string/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:text="@string/forgetpassword" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_signIN"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/main"
                android:padding="15dp"
                android:text="@string/sign_in_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/main"
                app:layout_constraintStart_toStartOf="@+id/bt_signIN"
                app:layout_constraintEnd_toEndOf="@+id/bt_signIN"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_signIN" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linear_im_social"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/google" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:src="@drawable/facebook" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/Register" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>