<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".order.DetailsItemFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="158dp"
        android:layout_height="match_parent"
        android:background="@color/main"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_titile"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/custom_button_white"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/item_1"
        android:gravity="start"
        android:textSize="20dp"
        android:textColor="@color/main"
        android:layout_marginTop="20dp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_price"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/main_custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/price"
        android:gravity="end"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_titile"

        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cart_center"
        android:layout_width="270dp"
        android:layout_height="330dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_price">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="-30dp"
            android:backgroundTint="@color/buttonColor"

            app:cardCornerRadius="200dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"

                android:src="@drawable/heart" />


        </androidx.cardview.widget.CardView>


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="start"
            android:layout_margin="40dp"
            android:src="@drawable/sushi_rolls_with_wooden_chopsticks_on_white_background" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/itemdetails"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linear"
        app:layout_constraintTop_toBottomOf="@+id/cart_center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_add_to_cart"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_button_white"
        android:text="@string/addtocart"
        android:textColor="@color/main"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"

        />

</androidx.constraintlayout.widget.ConstraintLayout>